--- a/62130500099_groupwork_1/index.html
+++ b/62130500099_groupwork_1/index.html
@@ -32,16 +32,15 @@
 
         <div class="flex justify-start">
             <div class="flex items-center">
-              <img class="sm:block h-16" src="./images/leb2-logo.png" alt="Leb2-Logo">
+              <img class="h-16" src="./images/leb2-logo.png" alt="Leb2-Logo">
             </div>
-          <div class="sm:block">
+          
             <div class="flex space-x-4">
-              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <a href="#" class="bg-gray-900 text-white px-3 py-5 text-sm font-medium">Class</a>
               <a href="#" class="hover:text-white px-3 py-5 text-sm text-green-100">Community</a>
               <a href="#" class="hover:text-white px-3 py-5 text-sm text-green-100 ">Support</a>
             </div>
-          </div>
+          
         </div>
 
         <!-- navbar right (Name and 2 icons)-->
